# teo

./: .gitignore  CMakeLists.txt  README.md
shaders/: basic.frag  basic.vert
src/: main.cpp
src/core/: Window.cpp  Window.hpp
src/graphics/: Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/loader/: GLTFLoader.cpp  GLTFLoader.hpp
src/scene/: Camera.cpp  Camera.hpp  Model.cpp  Model.hpp  Transform.cpp  Transform.hpp
